Changed ellipsis position to fixed to keep it visible on screen while scrolling

--- a/src/styles/components/_split-pane.scss
+++ b/src/styles/components/_split-pane.scss
@@ -61,10 +61,10 @@
 
   @include media (lg) {
     display: block;
-    position: relative;
+    position: fixed;
     top: 50%;
     width: fit-content;
-    margin: auto;
+    margin: auto 3px;
 
     & > div {
       width: 3px;
